(fix): spacing with sorted bar on feed

--- a/src/app/modules/newsfeed/feeds/sorted.component.scss
+++ b/src/app/modules/newsfeed/feeds/sorted.component.scss
@@ -36,7 +36,7 @@ m-newsfeed--sorted {
 .m-feeds-sorted__query {
   font-size: 16px;
   letter-spacing: 1px;
-  margin: 12px 4px;
+  margin: 12px 4px 4px;
 }
 
 .m-feeds-sorted__Filter {
@@ -100,6 +100,6 @@ m-newsfeed--sorted {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   color: #444;
-  padding: 8px 8px 16px;
+  padding: 8px;
   font-weight: 400;
 }
